--- a/templates/admin-dashboard.html
+++ b/templates/admin-dashboard.html
@@ -67,7 +67,7 @@
                 <div class="card dashboard-content">
                     <div class="card-body">
                         {# Start form body #}
-                        <form id="settings-form">
+                        <form id="stats-form">
                             {% for section in sections %}
                             <div class="row mb-3">
                                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
@@ -96,7 +96,7 @@
                 {# Start content card #}
                 <div class="card dashboard-content">
                     <div class="card-body">
-                        <form id="settings-form">
+                        <form id="accounts-form">
                             {% for section in sections %}
                             <div class="row mb-3">
                                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
