Implement user repos, more login functions

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -22,6 +22,10 @@ body {
     background-color: var(--color-bg);
 }
 
+.hidden {
+    display: none;
+}
+
 .content {
     flex: 1 0 auto;
     /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
