--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -29,6 +29,9 @@ body {
 .content {
     flex: 1 0 auto;
     /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
+    /* background-color: #1B9A59; */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
     padding: 20px;
     padding-top: 100px;
     color: var(--color-fg);
