--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -20,6 +20,8 @@ body {
     display: flex;
     flex-direction: column;
     background-color: var(--color-bg);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 13px;
 }
 
 .hidden {
@@ -30,7 +32,7 @@ body {
     flex: 1 0 auto;
     /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
     /* background-color: #1B9A59; */
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-weight: bold;
     padding: 20px;
     padding-top: 100px;
@@ -42,7 +44,10 @@ body {
     flex-shrink: 0;
     /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
     padding: 5px;
-    background-color: var(--color-bg-light);
+    /* background-color: var(--color-bg-light); */
+    background-color: #6f42c1;
+    color: var(--color-accent);
+    opacity: 0.75;
     width: 100%;
 }
 
