--- a/templates/repos-card.html
+++ b/templates/repos-card.html
@@ -10,6 +10,7 @@
                             <p class="card-text">Repository Status: {{ repo.repo_status }}</p>
                             <p class="card-text">All Time Commits: {{ repo.commits_all_time|int }}</p>
                             <p class="card-text">All Time Issues: {{ repo.issues_all_time|int }}</p>
+                            <p class="card-text">All Time Change Requests: {{ repo.pull_requests_all_time|int }}</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Repository ID: {{ repo.repo_id }}</small>
