--- a/templates/repos-table.html
+++ b/templates/repos-table.html
@@ -31,7 +31,8 @@
     {"title" : "Reports"},
     {"title" : "Commits", "key" : "commits_all_time"},
     {"title" : "Issues", "key" : "issues_all_time"},
-    {"title" : "Change Requests", "key" : "pull_requests_all_time"}] -%}
+    {"title" : "Change Requests"}] -%}
+    <!-- {"title" : "Change Requests", "key" : "pull_requests_all_time"}] -%} -->
 <div class="display-table rounded w3-animate-opacity">
     <table class="table table-striped table-bordered">
         <!-- Table header start -->
@@ -61,7 +62,8 @@
                 <td>TODO</td>
                 <td>{{ repo.commits_all_time|int }}</td>
                 <td>{{ repo.issues_all_time|int }}</td>
-                <td>{{ repo.pull_requests_all_time|int }}</td>
+                <td>TODO</td>
+                <!-- <td>{{ repo.pull_requests_all_time|int }}</td> -->
             </tr>
             {% endfor %}
         </tbody>
